Sistemato il css per le pagine curiosità e protagonisti. Serve fix per footer e la tabella delle stagioni

--- a/style/small.css
+++ b/style/small.css
@@ -1,4 +1,4 @@
-.midImage, .bigImage, #logo {
+.midImage, .bigImage, #logo, .rightImage, dd img {
   display: none;
 }
 
@@ -49,7 +49,6 @@ body {
 }
 #footer p {
   width: 100%;
-
 }
 
 #footer img {
