--- a/style/style.css
+++ b/style/style.css
@@ -139,13 +139,13 @@ h3 {
 
 .rightImage {
 	float: right;
-	max-width: 15em;
+	max-width: 35%;
 	margin-bottom: 0.5em;
 }
 
 /* pagina curiosità */
 p.sideRImages { 
-	margin-right: 16em;
+	margin-right: 40%;
 	margin-left: 0;
 }
 
@@ -163,6 +163,8 @@ dl dt {
 	border-left: 2px solid #000;
 	border-right: 2px solid #000;
 	margin-top: 2%;
+	font-size: 1.5em;
+	font-weight: bold;
 }
 
 dd img {
@@ -230,7 +232,14 @@ th, td {
 	border: 2px solid #ccc;
 }
 
-th {
+tfoot td, th {
+	background-color: #cc0000;
+	color: #fff;
+	font-weight: bold;
+	text-align: center;
+}
+
+th, td {
 	padding: 1em;
 }
 
