--- a/style/style.css
+++ b/style/style.css
@@ -227,6 +227,9 @@ table {
 	border-collapse: collapse;
 	margin: auto;
 }
+th abbr, td abbr {
+	text-decoration: none;
+}
 
 th, td {
 	border: 2px solid #ccc;
