--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,17 @@ body {
 	border: 1px solid;
 }
 
+a:link {
+	color: #cc0000;
+}
+
+/*helper for blind users*/
+.help {
+	position: absolute;
+	height: 0;
+	overflow: hidden;
+}
+
 /*header*/
 
 #logo {
